--- a/src/expectantmothers.njk
+++ b/src/expectantmothers.njk
@@ -19,7 +19,7 @@
 				<!-- Main -->
 					<div id="main">
 						 <!--inner-->
-						<div class="inner" style="margin: 1rem;">
+						<div class="inner" style="margin: .5rem;">
 
 							{% include "./_components/header.njk" %}
 		
