--- a/src/about.njk
+++ b/src/about.njk
@@ -27,7 +27,7 @@
 							{%include "./_components/aboutushead.njk"%}
 							
 							{%include "./_components/ourteam.njk"%}
-							<header class="major">
+							{# <header class="major">
 								<h3>More About Us</h3>
 							</header>
 							
@@ -53,7 +53,7 @@
 									<h3>Accumsan montes viverra</h3>
 									<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit.</p>
 								</div>
-							</div>
+							</div> #}
 							<br>
 
 							<!--END CONTENT-->
