--- a/src/_components/spinninglogos.njk
+++ b/src/_components/spinninglogos.njk
@@ -10,6 +10,10 @@
             font-family: 'Arial', sans-serif;
         }
 
+        .button {
+            color: rgb(99, 98, 98) !important;
+        }
+
         .container {
             display: flex;
             flex-wrap: wrap;
@@ -87,12 +91,12 @@
     <div class="container specific-container">
         <!-- Box 1 -->
         <div class="box">
-            <img src="assets/images/expectantmothers.png" alt="Expectant Mothers" width="340" class="spinonscroll">
+            <img src="/assets/images/expectantmothers.png" alt="Expectant Mothers" width="340" class="spinonscroll">
             <div class="content-div">
                 <h2>Expectant Mothers</h2>
                 <p>We strive to cater to our expectant mothers and to make this extremely difficult experience as bright as possible.</p>
                 <div>
-                    <a href="/expectant-mothers/" class="blackbutton">Learn More</a>
+                    <a href="/expectantmothers" class="button">See Details</a>
                 </div>
             </div>
         </div>
@@ -104,7 +108,7 @@
                 <h2>Housing Program</h2>
                 <p>We have multiple one-bedroom and two-bedroom apartment units available for our expectant mothers to stay in.</p>
                 <div>
-                    <a href="/housing-program/" class="blackbutton">Learn More</a>
+                    <a href="/housing" class="button">See Details</a>
                 </div>
             </div>
         </div>
@@ -116,7 +120,7 @@
                 <h2>Adopting Families</h2>
                 <p>While we don’t work directly with families wanting to adopt, we can help point you in the right direction.</p>
                 <div>
-                    <a href="/adopting-families/" class="blackbutton">Learn More</a>
+                    <a href="/adoptivefamilies" class="button">See Details</a>
                 </div>
             </div>
         </div>
