--- a/src/assets/sass/components/_button.scss
+++ b/src/assets/sass/components/_button.scss
@@ -20,7 +20,7 @@ button,
 	border-radius: _size(border-radius);
 	border: 0;
 	box-shadow: inset 0 0 0 2px _palette(accent);
-	color: _palette(accent) !important;
+	color: black !important;
 	cursor: pointer;
 	display: inline-block;
 	font-family: _font(family-heading);
