--- a/src/_components/contactus.njk
+++ b/src/_components/contactus.njk
@@ -64,7 +64,8 @@ font-family: 'Quicksand' !important;
     </style>
 </head>
 <body>
-    <div class="contact-background">
+    <div id="contact" class="contact-background">
+        <div id="anchor-name">Heading Text</div>
 
         <div class="contact-container">
             <h2>Let's talk!</h2>
