--- a/src/index.njk
+++ b/src/index.njk
@@ -72,13 +72,13 @@
 									<div class="content">
 										<header>
 											<h1>We are excited to meet you.<br /></h1>
-											<p>200+ placements, 20 years of experiences</p>
+											<p>We are a licensed child placing agency for expectant moms</p>
 										</header>
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.<br><br>We are ready to help.</p>
 										<br>
 										<div class="actions">
 											<div class="call-button">
-												<i class="fas fa-phone-alt"></i>
+												<i class="fas fa-phone-alt">tel=</i>
 												Call Now
 											</div>
 										</div>
