--- a/src/_components/housing.njk
+++ b/src/_components/housing.njk
@@ -5,6 +5,23 @@
   position: relative;
 }
 
+.youtube-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .centered-div {
+            text-align: center;
+        }
+
+        .youtube-embed {
+            width: 300px; /* Adjust the width as needed */
+            height: 600px; /* Adjust the height as needed */
+        }
+
 .container {
   width: 100%;
   max-width: 940px;
@@ -49,6 +66,16 @@
   line-height: 24px;
 }
 
+.margin-bottom-0px {
+  text-align: center;
+  margin-top: 51px;
+  padding-left: 39px;
+  padding-right: 37px;
+  font-family: Verdana, Geneva, sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
 .button-primary {
   color: #fff;
   text-align: center;
@@ -213,7 +240,12 @@
   <div class="div-block-2">
     <div class="div-block">
       <h1 class="heading-2">A Place To Call Your Own</h1>
-      <p class="margin-bottom-24px">We have multiple one-bedroom and two-bedroom apartment units available for our clients to stay in. All our apartments are in the heart of Layton, Utah, a suburb 20 miles north of Salt Lake City. <br><br>Our apartments are in a convenient area for our birth clients, with a shopping mall, Target, Dollar Tree, 7-11, and restaurants within walking distance. There are other grocery stores within a short drive from our apartments that the clients can visit. As you can see, our apartments are an ideal place to stay during this time.<a href="http://localhost:6269/contact/"><strong><br></strong></a><br><br><br></p>
+      <p class="margin-bottom-12px">We have multiple one-bedroom, two-bedroom and three-bedroom apartment units available for our clients to stay in depending on your needs. All our apartments are in the heart of Layton, Utah, a suburb 20 miles north of Salt Lake City. <br><br>Our apartments are in a safe and convenient area for our clients; with a shopping mall, Target, Dollar Tree, 7-11, restaurants and public schools within walking distance. Free public transportation, and Lyft and Uber are available. <a href="http://localhost:6269/contact/"><strong><br></strong></a><br><br><br></p>
+      <div class="youtube-container">
+        <div class="centered-div">
+            <iframe class="youtube-embed" width="560" height="315" src="https://youtu.be/voDVb4a2R3Y" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </div>
     </div>
   </div>
 </section>
