--- a/src/counseling.njk
+++ b/src/counseling.njk
@@ -24,7 +24,7 @@
 
 							{% include "./_components/header.njk" %}
 
-							{% include "./_components/housing.njk" %}
+							{% include "./_components/counseling.njk" %}
 
 
 						</div>
