--- a/src/_components/sidebar.njk
+++ b/src/_components/sidebar.njk
@@ -78,7 +78,7 @@
 										<span class="opener">Services</span>
 										<ul>
 											<li><a href="/housing">Housing</a></li>
-											<li><a href="/medical">Medical</a></li>
+											{# <li><a href="/medical">Medical</a></li> #}
 											<li><a href="/counseling">Counseling Services</a></li>
 									</ul>
 
@@ -234,7 +234,7 @@
 									<li class="icon solid fa-envelope"><a href="#">sandi@brighteradoption.com</a></li>
 									<li class="icon solid fa-phone">(801) 989-6386</li>
 									<li class="icon solid fa-home">952 S Main St #B-2<br />
-									Layton, UT 84403</li>
+									Layton, UT 84041</li>
 								</ul>
 							</section>
 
