--- a/src/index.njk
+++ b/src/index.njk
@@ -77,10 +77,10 @@
 										<p>Brighter Adoptions has served hundreds of clients. We feel a great sense of responsibility to help the women who come to us have the best experience possible and find the perfect family for their unborn child.<br><br>We are ready to help.</p>
 										<br>
 										<div class="actions">
-											<div class="call-button">
-												<i class="fas fa-phone-alt">tel=</i>
+											<a class="call-button" href="tel:801-989-6386">
+												<i class="fas fa-phone-alt"></i>
 												Call Now
-											</div>
+											</a>
 										</div>
 									</div>
 								</div>
