--- a/src/_components/housing.njk
+++ b/src/_components/housing.njk
@@ -243,8 +243,9 @@
       <p class="margin-bottom-12px">We have multiple one-bedroom, two-bedroom and three-bedroom apartment units available for our clients to stay in depending on your needs. All our apartments are in the heart of Layton, Utah, a suburb 20 miles north of Salt Lake City. <br><br>Our apartments are in a safe and convenient area for our clients; with a shopping mall, Target, Dollar Tree, 7-11, restaurants and public schools within walking distance. Free public transportation, and Lyft and Uber are available. <a href="http://localhost:6269/contact/"><strong><br></strong></a><br><br><br></p>
       <div class="youtube-container">
         <div class="centered-div">
-          <iframe width="395" height="703" src="https://www.youtube.com/embed/5zzg2yfwhdq" title="january 15, 2024" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
-    </div>
+          <iframe width="410" height="720" src="https://res.cloudinary.com/duji5kfeq/video/upload/c_crop,h_720,w_410/v1705360436/Brighter_Adoptions_Housing_mwytjd.mp4" frameborder="0" allowfullscreen></iframe>
+
+        </div>
     </div>
   </div>
 </section>
