--- a/src/_components/aboutushead.njk
+++ b/src/_components/aboutushead.njk
@@ -184,7 +184,7 @@
 
 .mainVideo {
   width: 85%;
-  height: 450px;
+  height: 450px; 
   margin-top: -30px;
   margin-right: 0px;
   margin-bottom: 0px;
@@ -481,11 +481,11 @@
   }
 
   .mainVideo {
-    height: 400px;
+    /* height: 400px; */
   }
 
   .videoContainer {
-    height: 550px;
+    /* height: 550px; */
   }
 
   .explore {
@@ -589,7 +589,7 @@
         </a>
       </div>
       <div class="videoContainer">
-        <iframe
+        {# <iframe
             src="https://res.cloudinary.com/duji5kfeq/video/upload/c_crop,e_volume:0,f_auto/v1705361785/IMG_6659_krmehh.mov"
             width="360"
             height="600"
@@ -598,7 +598,7 @@
             allowfullscreen
             frameborder="0"
             ></iframe>
-        <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg" style="z-index: -1;">
+        <img class="dotsImg image-block" src="https://workik-widget-assets.s3.amazonaws.com/widget-assets/images/cw3.svg" style="z-index: -1;"> #}
       </div>
     </div>
   </div>
